[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "Custom derive support for scrapmetal."
license = "Apache-2.0/MIT"
name = "scrapmetal-derive"
repository = "https://github.com/fitzgen/scrapmetal"
version = "0.1.0"
workspace = ".."

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[lib]
proc_macro = true
